Minor fixes in installation of extism-py tool. Upgraded devcontainer to 22.04 because `extism-py` binary requires newer version of Glibc.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,9 @@
 {
   "name": "Extism Python: HTTP request from WASM",
+  "image": "ubuntu:jammy",
+  "features": {
+    "ghcr.io/devcontainers/features/common-utils": {}
+  },
   "customizations": {
     "vscode": {
       "extensions": [
